@@ -78,7 +78,7 @@
         <drools-quarkus.version>8.33.0.Final</drools-quarkus.version>
         <optaplanner-quarkus.version>8.33.0.Final</optaplanner-quarkus.version>
 
-        <quarkus-google-cloud-services.version>1.3.0</quarkus-google-cloud-services.version>
+        <quarkus-google-cloud-services.version>2.0.0</quarkus-google-cloud-services.version>
         <quarkus-vault.version>3.0.0.Alpha1</quarkus-vault.version>
         <quarkus-operator-sdk.version>5.0.0.Beta1</quarkus-operator-sdk.version>
 
@@ -577,6 +577,7 @@
                                         </test>
                                     </tests>
                                 </member>
+                                -->
                                 <member>
                                     <name>GoogleCloudServices</name>
                                     <bom>io.quarkiverse.googlecloudservices:quarkus-google-cloud-services-bom:${quarkus-google-cloud-services.version}</bom>
@@ -586,6 +587,7 @@
                                     </release>
                                     <defaultTestConfig>
                                         <skip>false</skip>
+                                        <jvmArgLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</jvmArgLine>
                                     </defaultTestConfig>
                                     <tests>
                                         <test>
@@ -593,6 +595,7 @@
                                         </test>
                                     </tests>
                                 </member>
+                                <!--
                                 <member>
                                     <name>OperatorSDK</name>
                                     <bom>io.quarkiverse.operatorsdk:quarkus-operator-sdk-bom:${quarkus-operator-sdk.version}</bom>
